# meltano-meta

./: .gitignore  .pre-commit-config.yaml  README.md  meltano_output.json  openlinage_output.json  openlineage.json  produce_metadata.py  pyproject.toml
cli/: __init__.py  commands.py
data/: manifest.json
